tests/lean/621.lean.expected.out
621.lean:4:45-4:47: error: failed to coerce
  xs
to a type, after applying `CoeSort.coe`, result is still not a type
  xs.val
this is often due to incorrect `CoeSort` instances, the synthesized instance was
  instCoeSortSubtype ϕ
